1.Added hashTag LeaderBoard 2.You don't have access to any dashboards yet 3.Moz rank - values aren't appearing 4.Moz - number format 5.Settings icon alignment 6.JPEG export - cover all widgets in the dashboard 7.PDF has been generated successfully font style 8.Instagram recent posts spinner issue 9.URL link  style issue in shared URL screen  10.Shared URl isn't working when directly click on hyperlink  11.Spinner alignment in shared URL screen  12.Recent dashboard naming

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,6 +156,7 @@ svg:hover #Calendar-Icon { fill: #293846; }
     height: 20px;
     margin-top:15px;
     margin-bottom: 15px;
+    text-transform: capitalize;
 }
 @media(max-width : 767px) and (min-width : 370px) {
     .dashboardSelect{
@@ -2528,7 +2529,7 @@ del {
 }
 .widget-icons:hover,
 .widget-icons.active {
-    border: 2px solid #04509B;
+    border: 2px solid #1074ae;
     /*
     -webkit-box-shadow: 0px -3px -3px 0px #a8a8a8;
     -moz-box-shadow: 0px -3px -3px 0px #a8a8a8;
@@ -2818,10 +2819,11 @@ a.customApiLink{
 
 .pdfHeadText{
     background-color: white;
-    font-family: Heebo-Thin;
+    color:#1074ae;
+    font-family: Heebo-Medium;
     border-radius: 5px;
     text-align: center;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .closeModalContent{
@@ -2896,7 +2898,7 @@ button.btn.btn-primary.changePassword {
 .triangle-topright {
     width: 0px;
     height: 0px;
-    border-top: 40px solid #04509B;
+    border-top: 40px solid #1074ae;
     border-left: 40px solid transparent;
     padding: 0px;
     margin: -13px 0px 0px 82%;
